@@ -1,5 +1,12 @@
 2001-12-11  James Tanis  <jtt@winwood.sysdetect.com>
 
+	* lib/b_url.c (bk_url_parse): Fix bk_strndup() usage to account
+	for its better behavior.
+	(bk_url_parse): Allow caller to pass in flag which makes bare path
+	component return a protocol of "file".
+
+	* lib/b_string.c (bk_strndup): Allocate extra space for NULL.
+
 	* lib/b_signal.c (bk_signal_mgmt): Allow users to manage signal
 	handlers. 
 	(bk_signal_set_alarm): Function to safely seize control of a signal.
